Add isValid() validation with PowerMock whenPrivate/invokePrivate demo